1. Associated and instant open commands for files in download manager. 2. Storing work catalog for file save dialogs to settings.

--- a/downloadmanager.ui
+++ b/downloadmanager.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>JPReader download manager</string>
+   <string>Download manager - JPReader</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
