Google translate and copying to light translator added to browser context menu for selected text fragment.

--- a/jpreader.qrc
+++ b/jpreader.qrc
@@ -7,6 +7,7 @@
         <file alias="globe128">img/globe_128.png</file>
         <file alias="jisho">img/jisho.png</file>
         <file alias="nepomuk">img/nepomuk.png</file>
+        <file alias="google_translate">img/google_translate.png</file>
     </qresource>
     <qresource prefix="/data">
         <file alias="startpage">data/startpage.html</file>
