--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -26,7 +26,7 @@
       <attribute name="title">
        <string>Browser</string>
       </attribute>
-      <layout class="QHBoxLayout" name="horizontalLayout_19">
+      <layout class="QHBoxLayout" name="horizontalLayout_32">
        <item>
         <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
@@ -95,10 +95,27 @@
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
-             <height>40</height>
+             <height>17</height>
             </size>
            </property>
           </spacer>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_19">
+           <item>
+            <widget class="QLabel" name="label_32">
+             <property name="text">
+              <string>Max &amp;recent items</string>
+             </property>
+             <property name="buddy">
+              <cstring>spinMaxRecent</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="spinMaxRecent"/>
+           </item>
+          </layout>
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_12">
@@ -152,6 +169,12 @@
            </item>
            <item>
             <widget class="QComboBox" name="editUserAgent">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="editable">
               <bool>true</bool>
              </property>
@@ -1749,6 +1772,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>checkIgnoreSSLErrors</tabstop>
   <tabstop>checkLogNetworkRequests</tabstop>
   <tabstop>checkJSLogConsole</tabstop>
+  <tabstop>spinMaxRecent</tabstop>
   <tabstop>spinMaxRecycled</tabstop>
   <tabstop>spinMaxHistory</tabstop>
   <tabstop>checkUserAgent</tabstop>
