Long click on translation button forces subsentences mode. Bugfixes: missed slots in globalcontrol after refactoring, tab tooltips with page thumbnails for inactive tabs, unregistering empty global hotkey, translation cancel timer workaround for webengine widget segfaults.

--- a/snviewer.ui
+++ b/snviewer.ui
@@ -302,6 +302,10 @@
         </item>
         <item>
          <widget class="QPushButton" name="transButton">
+          <property name="toolTip">
+           <string>Translate document.
+Long press forces subsentences mode.</string>
+          </property>
           <property name="text">
            <string>Translate</string>
           </property>
