--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>886</width>
+    <width>849</width>
     <height>378</height>
    </rect>
   </property>
@@ -1548,6 +1548,61 @@ p, li { white-space: pre-wrap; }
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="tab_16">
+      <attribute name="title">
+       <string>User scripts</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_25">
+       <item>
+        <widget class="QListWidget" name="listUserScripts"/>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_33">
+         <item>
+          <widget class="QPushButton" name="buttonUserScriptAdd">
+           <property name="text">
+            <string>Add...</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="buttonUserScriptEdit">
+           <property name="text">
+            <string>Edit...</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="buttonUserScriptImport">
+           <property name="text">
+            <string>Import...</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_9">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="buttonUserScriptDelete">
+           <property name="text">
+            <string>Delete</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
      <widget class="QWidget" name="tab_8">
       <attribute name="title">
        <string>Misc</string>
@@ -1850,6 +1905,11 @@ p, li { white-space: pre-wrap; }
   <tabstop>buttonExportCookies</tabstop>
   <tabstop>buttonDelCookies</tabstop>
   <tabstop>buttonClearCookies</tabstop>
+  <tabstop>listUserScripts</tabstop>
+  <tabstop>buttonUserScriptAdd</tabstop>
+  <tabstop>buttonUserScriptEdit</tabstop>
+  <tabstop>buttonUserScriptImport</tabstop>
+  <tabstop>buttonUserScriptDelete</tabstop>
   <tabstop>checkUseProxy</tabstop>
   <tabstop>checkUseProxyTranslator</tabstop>
   <tabstop>editProxyHost</tabstop>
@@ -1871,8 +1931,8 @@ p, li { white-space: pre-wrap; }
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>695</x>
-     <y>397</y>
+     <x>752</x>
+     <y>367</y>
     </hint>
     <hint type="destinationlabel">
      <x>204</x>
@@ -1887,8 +1947,8 @@ p, li { white-space: pre-wrap; }
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>781</x>
-     <y>397</y>
+     <x>838</x>
+     <y>367</y>
     </hint>
     <hint type="destinationlabel">
      <x>271</x>
@@ -1903,8 +1963,8 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>114</x>
-     <y>98</y>
+     <x>125</x>
+     <y>82</y>
     </hint>
     <hint type="destinationlabel">
      <x>123</x>
@@ -1919,12 +1979,12 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>684</x>
-     <y>98</y>
+     <x>695</x>
+     <y>82</y>
     </hint>
     <hint type="destinationlabel">
-     <x>770</x>
-     <y>112</y>
+     <x>827</x>
+     <y>114</y>
     </hint>
    </hints>
   </connection>
@@ -1935,8 +1995,8 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>256</x>
-     <y>191</y>
+     <x>276</x>
+     <y>175</y>
     </hint>
     <hint type="destinationlabel">
      <x>298</x>
@@ -1967,8 +2027,8 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>267</x>
-     <y>191</y>
+     <x>276</x>
+     <y>175</y>
     </hint>
     <hint type="destinationlabel">
      <x>298</x>
@@ -1984,11 +2044,11 @@ p, li { white-space: pre-wrap; }
    <hints>
     <hint type="sourcelabel">
      <x>276</x>
-     <y>191</y>
+     <y>175</y>
     </hint>
     <hint type="destinationlabel">
-     <x>337</x>
-     <y>311</y>
+     <x>308</x>
+     <y>295</y>
     </hint>
    </hints>
   </connection>
@@ -2003,8 +2063,8 @@ p, li { white-space: pre-wrap; }
      <y>95</y>
     </hint>
     <hint type="destinationlabel">
-     <x>311</x>
-     <y>131</y>
+     <x>340</x>
+     <y>130</y>
     </hint>
    </hints>
   </connection>
@@ -2083,8 +2143,8 @@ p, li { white-space: pre-wrap; }
      <y>86</y>
     </hint>
     <hint type="destinationlabel">
-     <x>153</x>
-     <y>175</y>
+     <x>572</x>
+     <y>98</y>
     </hint>
    </hints>
   </connection>
@@ -2095,12 +2155,12 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>769</x>
-     <y>289</y>
+     <x>826</x>
+     <y>214</y>
     </hint>
     <hint type="destinationlabel">
-     <x>769</x>
-     <y>319</y>
+     <x>826</x>
+     <y>244</y>
     </hint>
    </hints>
   </connection>
